<resources>
    <string name="app_name">Market</string>
    <string name="remove_all_message">Are you sure to remove all items from the list?</string>
    <string name="popup_copied">Text has been copied into clipboard</string>
    <string name="remove_all_title">Clear the list?</string>
    <string name="summary">Summary:</string>
    <string name="verify">verify</string>
    <string name="remove_all">remove all</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>
    <string name="add">add</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="weight_amount">weight/amount</string>
    <string name="cost">cost</string>
    <string name="discrepancy">discrepancy</string>
    <string name="semicolon" translatable="false">:</string>
    <string name="asterisk" translatable="false">*</string>
    <string name="zero" translatable="false">0</string>
    <string name="equals" translatable="false">=</string>
    <string name="cheese">cheese</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="db_name" translatable="false">market</string>
    <string name="tb_preferences" translatable="false">preferences</string>
    <string name="tb_snapshot" translatable="false">snapshot</string>
    <string name="cmd_drop_table" translatable="false">drop table if exists %1s</string>
    <string name="cmd_create_preferences" translatable="false">create table %1s (name text unique, color integer)</string>
    <string name="cmd_create_snapshot" translatable="false">create table %1s (name text unique, amount text, weight real, price real, cost real, color integer)</string>
    <string name="cmd_select_all" translatable="false">select * from %1s</string>
</resources>