<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/big_margin"
    tools:context=".EditActivity">

    <include layout="@layout/header_edit"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:requiresFadingEdge="vertical"
        tools:itemCount="20"
        tools:listitem="@layout/item_edit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_pixel"
        android:layout_margin="@dimen/small_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/tv_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/summary"
        />

        <TextView
            android:id="@+id/tv_summary_cost"
            style="@style/tv_base"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_width="0dp"
            android:text="@string/zero"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_add"
            style="@style/ib_icon"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add"
        />

        <ImageButton
            android:id="@+id/btn_paste"
            style="@style/ib_icon"
            android:src="@drawable/ic_paste"
            android:contentDescription="@string/paste"
        />

        <ImageButton
            android:id="@+id/btn_copy"
            style="@style/ib_icon"
            android:src="@drawable/ic_copy"
            android:contentDescription="@string/copy"
        />

        <ImageButton
            android:id="@+id/btn_remove"
            style="@style/ib_icon"
            android:src="@drawable/ic_cross"
            android:contentDescription="@string/remove_all"
        />

        <ImageButton
            android:id="@+id/btn_verify"
            style="@style/ib_icon"
            android:src="@drawable/ic_verify"
            android:contentDescription="@string/verify"
        />

    </LinearLayout>

    <did.pinbraerts.market.ColorPicker
        android:id="@+id/w_palette"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/color_size"
    />

</LinearLayout>