<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/big_margin"
    tools:context=".VerifyActivity">

    <include layout="@layout/header_verify"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:requiresFadingEdge="vertical"
        tools:listitem="@layout/item_verify"
        tools:itemCount="20"
    />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_pixel"
        android:layout_margin="@dimen/small_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:singleLine="true"
            android:lines="1"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/summary" />

        <TextView
            android:id="@+id/tv_summary_cost"
            style="@style/tv_base"
            android:layout_weight="1"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/tv_summary_discrepancy"
            style="@style/tv_base"
            android:layout_weight="1"
            android:textColor="@color/correct"
            android:text="@string/zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

<!--        <ImageButton-->
<!--            android:id="@+id/btn_add"-->
<!--            android:src="@drawable/ic_add"-->
<!--            android:contentDescription="add"-->
<!--            style="@style/ib_icon"-->
<!--        />-->

<!--        <ImageButton-->
<!--            android:id="@+id/btn_paste"-->
<!--            android:src="@drawable/ic_paste"-->
<!--            android:contentDescription="paste"-->
<!--            style="@style/ib_icon"-->
<!--        />-->

        <ImageButton
            android:id="@+id/ib_copy"
            android:src="@drawable/ic_copy"
            android:contentDescription="@string/copy"
            style="@style/ib_icon"
        />

    </LinearLayout>

</LinearLayout>
